# pylon

./: .gitignore  Cargo.toml  README.md  apps.example.json  rust-toolchain.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: app_lookup.rs  fanout.rs  mailbox.rs
deploy/: README.md
deploy/db/mongo/: 001_indexes.js
deploy/db/mysql/: 001_apps.sql
deploy/db/postgres/: 001_apps.sql
deploy/db/sqlite/: 001_apps.sql
deploy/docker/: .dockerignore  Dockerfile  Dockerfile.release  docker-compose.yml
deploy/helm/pylon/: Chart.yaml  values.yaml
deploy/helm/pylon/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
deploy/systemd/: 99-pylon.sysctl.conf  apps.example.json  pylon.env.example  pylon.service
docs/ops/: sysctl-tuning.md
load/: Cargo.toml
load/src/: cli.rs  lib.rs  main.rs  metrics.rs  pusher.rs
load/src/ceiling/: child.rs  conn_ramp.rs  mod.rs  mpstat.rs  openloop.rs  rate_ramp.rs  report.rs  spec.rs
load/src/scenario/: channels.rs  cluster.rs  connect.rs  fanout.rs  mod.rs
load/tests/: ceiling_child.rs  ceiling_openloop.rs  ceiling_smoke.rs  smoke.rs
scripts/: tune.sh
src/: config.rs  lib.rs  main.rs  signature.rs
src/adapter/: app_registry.rs  local.rs  mod.rs
src/adapter/redis/: client.rs  envelope.rs  keys.rs  mod.rs  presence.rs  pubsub.rs  sweeper.rs  user.rs
src/app/: cache.rs  invalidation.rs  l2.rs  mod.rs  mongo.rs  purger.rs  sql.rs  static_file.rs
src/auth/: channel.rs  mod.rs  rest.rs  signature.rs  user.rs
src/channel/: cache.rs  kind.rs  mod.rs  outcome.rs  registry.rs  state.rs
src/cluster/: adapter.rs  bridge.rs  mod.rs
src/connection/: handle.rs  mod.rs  task.rs
src/http/: error.rs  mod.rs
src/http/rest/: admin.rs  auth.rs  channels.rs  events.rs  health.rs  metrics.rs  mod.rs  users.rs
src/presence/: member.rs  mod.rs
src/protocol/: codec.rs  command.rs  error.rs  event.rs  mod.rs  socket_id.rs
src/protocol/v7/: frames.rs  mod.rs
src/server/: config.rs  mod.rs  resources.rs  router.rs  shutdown.rs
src/transport/: conn.rs  fanout.rs  frame.rs  handshake.rs  mod.rs  rest.rs  timer.rs  tls.rs  worker.rs
src/user/: mod.rs  registry.rs
src/webhook/: dispatcher.rs  mod.rs  occupancy.rs  transport.rs
src/ws/: handler.rs  handler_tests.rs  mod.rs  rate.rs  signin.rs  subscribe.rs  upgrade.rs
tests/: admin.rs  cluster_bridge.rs  cluster_subscribe.rs  health.rs  integration.rs  metrics.rs  mongo_app_manager.rs  mysql_app_manager.rs  percore.rs  percore_cluster.rs  percore_cluster_cache.rs  percore_cluster_presence.rs  percore_cluster_user.rs  percore_drain.rs  percore_liveness.rs  percore_multiworker.rs  percore_nonblocking_establish.rs  percore_overload.rs  percore_selective_drain.rs  postgres_app_manager.rs  redis_cluster.rs  redis_failover.rs  rest.rs  signin.rs  tls.rs  watchlist.rs  webhooks.rs
tests/common/: mod.rs
website/: mkdocs.yml
website/docs/: index.md
website/docs/dev-guide/: architecture.md  building-and-testing.md  contributing.md  protocol.md  release-process.md
website/docs/user-guide/: applications.md  channels.md  clients.md  clustering.md  configuration.md  deployment.md  installation.md  introduction.md  observability.md  production-tuning.md  quick-start.md  tls.md  triggering-events.md  troubleshooting.md  webhooks.md
