[package]
name = "pylon"
version = "0.1.0"
edition = "2021"
description = "A Pusher-compatible real-time WebSocket server"
repository = "https://github.com/oyro-os/pylon"

[features]
# Exposes off-hot-path debug accessors (e.g. `percore_total_inflight_bytes`) for
# integration tests of the SP10 overload accounting. Off by default; the crate's
# own `cargo test` enables it implicitly via `cfg(test)`.
test-hooks = []

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "signal", "time"] }
# HTTP + WebSocket (axum's ws extractor rides on tokio-tungstenite).
# Swap to fastwebsockets + hyper later if raw throughput becomes the priority.
axum = { version = "0.8", features = ["ws"] }
# Zero-copy byte buffers for the lean per-core transport frame codec
bytes = "1"
# Hand-written epoll event loop for the SP9 per-core transport (non-blocking sockets).
mio = { version = "1", features = ["os-poll", "net"] }
# HTTP request-head parsing for the per-core WS handshake / REST routing (SP9).
httparse = "1"
# O(1) connection table keyed by the mio Token value for the per-core worker (SP9).
slab = "0.4"
# Serve axum REST connections handed off from the per-core mio worker to the
# tokio runtime (SP9 REST handoff): auto HTTP/1+2 server + tower→hyper glue.
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio", "service", "http1", "http2"] }
# RFC 6455 Sec-WebSocket-Accept = base64(sha1(key + GUID)).
sha1 = "0.10"
base64 = "0.22"
# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pusher signature primitives
hmac = "0.12"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
subtle = "2.6"          # constant-time comparison
# Misc
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"           # sharded concurrent map for the channel registry
async-trait = "0.1"
rand = "0.8"
futures-util = "0.3"
# Synchronous `block_on` to drive the async protocol dispatch from the
# readiness-driven (non-async) per-core worker loop (SP9). LocalAdapter's async
# methods never await real I/O, so this completes without parking a runtime.
futures-executor = "0.3"
thiserror = "1"
# TLS: rustls (direct dep — already transitively present at 0.23 via reqwest/fred) + PEM loader.
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
# Outbound HTTP for webhook delivery. rustls (no OpenSSL system dep) to reach https endpoints.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Redis client for the scaling adapter
fred = { version = "10", default-features = false, features = ["subscriber-client", "i-pubsub", "i-scripts", "i-std", "sha-1", "enable-rustls"] }
uuid = { version = "1", features = ["v4"] }
# Global allocator: faster + better cross-thread alloc/free for the cross-core fan-out pattern.
mimalloc = { version = "0.1", default-features = false }
# SO_REUSEPORT/SO_REUSEADDR listener sockets — one per per-core worker so the
# kernel load-balances accepts across worker threads (SP9 multi-worker). The
# `all` feature unlocks `set_reuse_port` (gated `cfg(all(feature="all", unix))`).
socket2 = { version = "0.5", features = ["all"] }
# Pin each per-core worker thread to a CPU (SP9 multi-worker core affinity).
core_affinity = "0.8"
# Parallelize the per-subscriber broadcast enqueue across a work-stealing pool
# (SP9 fan-out): the single-threaded mailbox.send loop caps large-channel fan-out.
rayon = "1"

[dev-dependencies]
# Self-reference with `test-hooks` so integration tests (which see `pylon` as an
# external crate, where `cfg(test)` is NOT active) can call the off-hot-path
# debug accessors like `percore_total_inflight_bytes`.
pylon = { path = ".", features = ["test-hooks"] }
# Self-signed cert generation for the TLS integration tests (never in production).
rcgen = "0.13"
# Enables paused-time control (`start_paused`, `tokio::time::advance`) in tests.
tokio = { version = "1", features = ["test-util"] }
tokio-tungstenite = "0.24"
criterion = "0.5"
futures-util = "0.3"
# Used by transport::conn tests to shrink SO_SNDBUF and force partial writes.
socket2 = "0.5"

[[bench]]
name = "fanout"
harness = false

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = ["load"]
